@@ -70,6 +70,7 @@ AC_ARG_WITH(  [ntoa],         AS_HELP_STRING([--without-ntoa],        [without i
 AC_ARG_WITH(  [pfa],          AS_HELP_STRING([--without-pfa],         [without Page Frame Allocator]))
 AC_ARG_WITH(  [printf],       AS_HELP_STRING([--without-printf],      [without printf]))
 AC_ARG_WITH(  [printf-fmt],   AS_HELP_STRING([--without-printf-fmt],  [without printf format parser]))
+AC_ARG_WITH(  [stack-trace],  AS_HELP_STRING([--without-stack-trace], [without stack trace]))
 AC_ARG_WITH(  [units],        AS_HELP_STRING([--without-units],       [without measurement units utils]))
 
 dnl Packages (disabled by default)
@@ -103,6 +104,7 @@ if test -z "$with_ntoa";        then with_ntoa=no;        fi
 if test -z "$with_pfa";         then with_pfa=no;         fi
 if test -z "$with_printf";      then with_printf=no;      fi
 if test -z "$with_printf_fmt";  then with_printf_fmt=no;  fi
+if test -z "$with_stack_trace"; then with_stack_trace=no; fi
 if test -z "$with_units";       then with_units=no;       fi
 ])
 AS_IF([test "$with_all" = no], do_without_all)
@@ -140,6 +142,7 @@ AS_IF([test "$with_ntoa"           = no ], [with_ntoa=no],            [with_ntoa
 AS_IF([test "$with_pfa"            = no ], [with_pfa=no],             [with_pfa=yes])
 AS_IF([test "$with_printf"         = no ], [with_printf=no],          [with_printf=yes])
 AS_IF([test "$with_printf_fmt"     = no ], [with_printf_fmt=no],      [with_printf_fmt=yes])
+AS_IF([test "$with_stack_trace"    = no ], [with_stack_trace=no],     [with_stack_trace=yes])
 AS_IF([test "$with_units"          = no ], [with_units=no],           [with_units=yes])
 
 dnl Packages (disabled by default)
@@ -196,6 +199,7 @@ AM_CONDITIONAL([WITH_NTOA],           [test "$with_ntoa"           = yes])
 AM_CONDITIONAL([WITH_PFA],            [test "$with_pfa"            = yes])
 AM_CONDITIONAL([WITH_PRINTF],         [test "$with_printf"         = yes])
 AM_CONDITIONAL([WITH_PRINTF_FMT],     [test "$with_printf_fmt"     = yes])
+AM_CONDITIONAL([WITH_STACK_TRACE],    [test "$with_stack_trace"    = yes])
 AM_CONDITIONAL([WITH_UNITS],          [test "$with_units"          = yes])
 
 dnl Packages (disabled by default)
@@ -237,6 +241,7 @@ AS_IF([test "$with_ntoa"           = yes], [AC_DEFINE([WITH_NTOA],           [1]
 AS_IF([test "$with_pfa"            = yes], [AC_DEFINE([WITH_PFA],            [1], [with Page Frame Allocator])])
 AS_IF([test "$with_printf"         = yes], [AC_DEFINE([WITH_PRINTF],         [1], [with printf])])
 AS_IF([test "$with_printf_fmt"     = yes], [AC_DEFINE([WITH_PRINTF_FMT],     [1], [with printf format parser])])
+AS_IF([test "$with_stack_trace"    = yes], [AC_DEFINE([WITH_STACK_TRACE],    [1], [with stack trace])])
 AS_IF([test "$with_units",         = yes], [AC_DEFINE([WITH_UNITS],          [1], [with measurement units utils])])
 
 dnl Packages (disabled by default)
@@ -265,6 +270,7 @@ AS_IF([test "$with_ntoa"        = no], [AC_SUBST([comment_line_ntoa],        [//
 AS_IF([test "$with_pfa"         = no], [AC_SUBST([comment_line_pfa],         [//])])
 AS_IF([test "$with_printf"      = no], [AC_SUBST([comment_line_printf],      [//])])
 AS_IF([test "$with_printf_fmt"  = no], [AC_SUBST([comment_line_printf_fmt],  [//])])
+AS_IF([test "$with_stack_trace" = no], [AC_SUBST([comment_line_stack_trace], [//])])
 AS_IF([test "$with_units"       = no], [AC_SUBST([comment_line_units],       [//])])
 
 
