@@ -1,0 +1,12 @@
+#ifndef KERNAUX_INCLUDED_STACK_TRACE
+#define KERNAUX_INCLUDED_STACK_TRACE
+
+#ifdef __cplusplus
+extern "C" {
+#endif
+
+#ifdef __cplusplus
+}
+#endif
+
+#endif
