@@ -1,0 +1,5 @@
+#ifdef HAVE_CONFIG_H
+#include "config.h"
+#endif
+
+#include <kernaux/stack_trace.h>
